updated text and font

--- a/cv/index.html
+++ b/cv/index.html
@@ -27,6 +27,19 @@
 
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/pillar-1.css" />
+
+    <style>
+      pre {
+        overflow-x: auto;
+        white-space: pre-wrap;
+        white-space: -moz-pre-wrap;
+        white-space: -pre-wrap;
+        white-space: -o-pre-wrap;
+        word-wrap: break-word;
+        font-family: Roboto, sans-serif;
+        font-size: large;
+      }
+    </style>
   </head>
 
   <body>
@@ -120,17 +133,14 @@
             </h2>
             <div class="resume-section-content">
               <pre class="mb-0">
-Currently working in Metisoft, Porto Potenza Picena, as a Senior Software Architect.
-Also, an freelancer, working on many projects with various clients.
+Currently working in Metisoft, Porto Potenza Picena, as a Senior Software Architect. Also, as freelancer, working on many projects with various clients.
 
 Work is mostly focused on building a solution that consists of:
 * Backend (C#, nodejs, php)
 * Frontend (Angular, Vue)
 * Build Process (Web server package, Mobile package, Cordova, CodePush)
 
-Objective of the work is to provide a standard framework for the company
-to deliver web/mobile application seemlessly with minimum resistence to deployment target variances.
-My rule of thumb is to produce minimum code and minimize time to market.
+Objective of the work is to provide a standard framework for the company to deliver web/mobile application seemlessly with minimum resistence to deployment target variances. My rule of thumb is to produce minimum code and minimize time to market.
 
 My lastest work get be discovered in github repository:
 <a href="https://github.com/unkyulee/WebApplication" target=_blank>https://github.com/unkyulee/WebApplication</a>
@@ -506,17 +516,16 @@ My lastest work get be discovered in github repository:
                       >
                     </li>
                     <li class="mb-2">
-                        <span class="resume-lang-name font-weight-bold"
-                          >Korean</span
-                        >
-                        <small class="text-muted font-weight-normal"
-                          >(Native)</small
-                        >
-                      </li>
+                      <span class="resume-lang-name font-weight-bold"
+                        >Korean</span
+                      >
+                      <small class="text-muted font-weight-normal"
+                        >(Native)</small
+                      >
+                    </li>
                   </ul>
                 </div>
               </section>
-
             </div>
           </div>
           <!--//row-->
