--- a/cv/index.html
+++ b/cv/index.html
@@ -137,7 +137,8 @@ Currently working in Metisoft, Porto Potenza Picena, as a Senior Software Archit
 
 Work is mostly focused on building a solution that consists of:
 * Backend (C#, nodejs, php)
-* Frontend (Angular, Vue)
+* Frontend (Angular, React, Vue)
+* Mobile App (Xamarin, Java, Cordova)
 * Build Process (Web server package, Mobile package, Cordova, CodePush)
 
 Objective of the work is to provide a standard framework for the company to deliver web/mobile application seemlessly with minimum resistence to deployment target variances. My rule of thumb is to produce minimum code and minimize time to market.
@@ -209,6 +210,11 @@ My lastest work get be discovered in github repository:
                           <li class="list-inline-item">
                             <span class="badge badge-primary badge-pill"
                               >Xamarin</span
+                            >
+                          </li>
+                          <li class="list-inline-item">
+                            <span class="badge badge-primary badge-pill"
+                              >Java</span
                             >
                           </li>
                           <li class="list-inline-item">
