updated the description

--- a/cv/index.html
+++ b/cv/index.html
@@ -133,7 +133,7 @@
             </h2>
             <div class="resume-section-content">
               <pre class="mb-0">
-Currently working in Metisoft, Porto Potenza Picena, as a Senior Software Architect. Also, as freelancer, working on many projects with various clients.
+Currently working in Metisoft, Porto Potenza Picena, as a Senior Software Architect. Also, as freelancer (Partita IVA), working on many projects with various clients. I am EU resident and fully eligible to work in EU countries without constraints, not required to acquire VISA.
 
 Work is mostly focused on building a solution that consists of:
 * Backend (C#, nodejs, php)
