home page link now working

--- a/cv/index.html
+++ b/cv/index.html
@@ -110,7 +110,7 @@
                     >
                   </li>
                   <li>
-                    <a href="https://unkyulee.github.io/"
+                    <a href="https://unkyulee.github.io/cv"
                       ><span class="fa-container text-center mr-2"
                         ><i class="fas fa-globe"></i></span
                       >unkyulee.github.io</a
