--- a/cv/index.html
+++ b/cv/index.html
@@ -94,9 +94,14 @@
           </h2>
           <div class="resume-section-content">
             <pre class="mb-0">
-Currently working in Metisoft, Porto Potenza Picena, as a Senior Software Architect. Also, as freelancer (Partita IVA), working on many projects with various clients. I am EU resident and fully eligible to work in EU countries without constraints. Same status as EU citizen. Does not require VISA nor sponsor.
+Expertise in Mobile dev (Android, iOS), Web app, and Desktop application. Recently, worked with Whirlpool Italy, delivering mobile app to support their workflow. Skilled in software development, architecture, customer management and project management.
 
-Work is mostly focused on building a solution that consists of:
+Status:
+* Residence in Italy
+* Family Member of a European Union Citizen
+* Nationality South Korean 
+
+Recent technologies used:
 * Backend (C#, nodejs, php)
 * Frontend (Angular, React, Vue)
 * Mobile App (Xamarin, Java, Cordova)
@@ -136,20 +141,49 @@ My lastest work get be discovered in github repository:
                     </div>
                     <!--//resume-timeline-item-header-->
                     <div class="resume-timeline-item-desc">
-                      <p>
-                        Collect requirements from the client, design,
-                        implement, and deliver software.
-                      </p>
-                      <h4 class="resume-timeline-item-desc-heading font-weight-bold">
-                        Achievements:
-                      </h4>
                       <ul>
                         <li>
-                          Whirlpool: Mobile app for field engineers
+                          <div class="resume-section-content">
+                            <p><b>Whirlpool enginner appointment management mobile application on Xamarin</b></p>
+                            <p>2018.01 ~ 2018.05</p>
+                            <p>Whirlpool Italia has engineers visiting customers to repair appliances. The software is
+                              for the engineers to manage their appointments, and perform workflows on the mobile
+                              device. Challenges was to make it work offline as the network coverage may not be
+                              available at the customers house, yet the workflow must be seemlessely performed. Project
+                              took around 5 months to complete. Development duration was around 3 month. My role on this
+                              project was software architecturing, development.</p>
+                            <img src="./portfolio/2018/whirlpool.png" width="70%" /><br>
+
+                            - Proposing project idea to the client and the management in order to initiate the
+                            project<br>
+                            - Continuous communication with the key user in order to report progress and collect
+                            feedback<br>
+                            - Assist project management by providing cost related measures throuout of the project<br>
+                            - Produced a software architecture that ensures integration with existing systems and
+                            workflows.<br>
+                            - Developed a xamarin mobile software, and replication module to enable offline capable
+                            features<br>
+                            - Developed a C# netcore backend software providing authentication and replication<br>
+                            <br>
+                          </div>
                         </li>
                         <li>
-                          ADA Clima, Vaillant: Document management app for the
-                          end users
+                          <div class="resume-section-content">
+                            <p><b>Appointment Booking for the end-users and integration with the schedule management
+                                backoffice</b></p>
+                            <p>2019.01 ~ 2019.09</p>
+                            <img src="./portfolio/2019/prontoada.png" width="70%" /><br>
+                            - Communicate with the business in order to collect requirements<br>
+                            - Communicate with the dev team and project management in order to identify an feasible
+                            requirement<br>
+                            - Estimate project cost in terms of development<br>
+                            - Produced a software architecture that covers the requirement.<br>
+                            - Developed a cordova/angular mobile application<br>
+                            - Developed a nodejs backend providing configurable REST services. Designed to eliminate the
+                            maintenance cost<br>
+                            - Provide test support with QA<br>
+                            - Release both iOS and Android app<br>
+                          </div>
                         </li>
                       </ul>
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -204,12 +238,26 @@ My lastest work get be discovered in github repository:
                     </div>
                     <!--//resume-timeline-item-header-->
                     <div class="resume-timeline-item-desc">
-                      <p>
-                        Developing in-house support software for scientific
-                        research purpose. Developed, control system for the
-                        vacuum machine, and search engine for research
-                        documents.
-                      </p>
+                      <ul>
+                        <li>
+                          <div class="resume-section-content">
+                            <p><b>Control System for Vaccuum Chamber in COMPASS Machine</b></p>
+                            <p>2019.01 ~ 2019.09</p>
+                            <img src="./portfolio/2017/controlcenter.png" width="70%" /><br>
+                            <BR>
+                            - Communicate with research team in order to collect requirements<br>
+                            - Communicate with operation team in order to ensure feasibility of the project<br>
+                            - Proposed a project plan to the management<br>
+                            - Coordinated the progress and status of the project with interested parties<br>
+                            - Participate to develop a electron/react desktop application<br>
+                            - Participate to develop a backend integrating with the vaccuum control boards<br>
+                            - Planned a release to minimize the operation interruption.<br>
+                            <br>
+                            <br>
+                          </div>
+                        </li>
+                      </ul>
+
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">
                         Technologies used:
                       </h4>
@@ -250,10 +298,53 @@ My lastest work get be discovered in github repository:
                     </div>
                     <!--//resume-timeline-item-header-->
                     <div class="resume-timeline-item-desc">
-                      <p>
-                        Data Management and Integration, BI, and Reporting
-                        tools
-                      </p>
+                      <ul>
+                        <li>
+                          <div class="resume-section-content">
+                            <p><b>Document search engine using Elasticsearch</b></p>
+                            <p>2015 ~ 2016</p>
+                            <p>ITER organization had large database of documents registered on their management system.
+                              However, due
+                              to SQL limitation and the quantity (10 million records) it was very difficult to search
+                              the
+                              contents of
+                              the document and return relevant results. Using elasticsearch, was possible to deliver
+                              incredibly fast
+                              responding search engine. This project was carried on as a one person project. Lesson
+                              learned
+                              from the
+                              project is that development task is only a tip of an iceberg. Politics and communications
+                              plays a major
+                              role in successful delivery of the project.</p>
+                            <img src="./portfolio/2015/searchengine.png" /><br>
+                            <br>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="resume-section-content">
+                            <p><b>Software Development Process</b></p>
+                            <p>2014</p>
+                            <p>One of the difficulties of working as a software developer in a non-software company is
+                              that,
+                              a proper
+                              process doesn't exists. Most of the work is based on frequent change requests such as
+                              tickets.
+                              Work
+                              becomes very un-organized quickly. Establishing a higher level stucture was necessary.
+                              Challenges are
+                              that often these companies lacks resources or interest to keep up with standard
+                              procedures.
+                              Often
+                              considered complex and useless. It was a long term project to capture the realistic
+                              process of
+                              the
+                              company and map it into an understandable format.</p>
+                            <img src="./portfolio/2014/process.png" width="70%" /><br>
+                          </div>
+                        </li>
+                      </ul>
+
+
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">
                         Technologies used:
                       </h4>
@@ -328,10 +419,27 @@ My lastest work get be discovered in github repository:
                     </div>
                     <!--//resume-timeline-item-header-->
                     <div class="resume-timeline-item-desc">
-                      <p>
-                        Support prototyping, and launching a projects for new
-                        ideas.
-                      </p>
+                      <ul>
+                        <li>
+                          <div class="resume-section-content">
+                            <p><b>Digital Audio Processing Simualtor</b></p>
+                            <p>2004</p>
+                            <p>Very first personal project of mine that got award from many organizations and contests.
+                              Developed when
+                              I was a student. I had great interest in signal processing. There were not so many audio
+                              processing
+                              simulators existed at the time and I decided to create on by myself. Benefit was that the
+                              calculation
+                              modules were configurable and the presentation of the simulation was very intriguing. It
+                              is out-dated
+                              project but I will always have this project in my portfolio as to remember my passion to
+                              enter software
+                              domain</p>
+                            <img src="./portfolio/2004/DAPS.png" width="100%" /><br>
+                          </div>
+                        </li>
+                      </ul>
+
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">
                         Technologies used:
                       </h4>
@@ -403,40 +511,6 @@ My lastest work get be discovered in github repository:
           </div>
         </div>
         <!--//row-->
-        <div class="row">
-          <section class="resume-section summary-section mb-5" style="width: 100%">
-            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">
-              Portfolio
-            </h2>
-            <div class="resume-section-content">
-              <p><b>Whirlpool enginner appointment management mobile application on Xamarin</b></p>
-              <p>2018.01 ~ 2018.05</p>
-              <p>Whirlpool Italia has engineers visiting customers to repair appliances. The software is for the engineers to manage their appointments, and perform workflows on the mobile device. Challenges was to make it work offline as the network coverage may not be available at the customers house, yet the workflow must be seemlessely performed. Project took around 5 months to complete. Development duration was around 3 month. My role on this project was software architecturing, development.</p>
-              <img src="./portfolio/2018/whirlpool.png" /><br>
-            </div>
-            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3"></h2>
-            <div class="resume-section-content">
-              <p><b>Document search engine using Elasticsearch</b></p>
-              <p>2015 ~ 2016</p>
-              <p>ITER organization had large database of documents registered on their management system. However, due to SQL limitation and the quantity (10 million records) it was very difficult to search the contents of the document and return relevant results. Using elasticsearch, was possible to deliver incredibly fast responding search engine. This project was carried on as a one person project. Lesson learned from the project is that development task is only a tip of an iceberg. Politics and communications plays a major role in successful delivery of the project.</p>
-              <img src="./portfolio/2015/searchengine.png" /><br>
-            </div>
-            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3"></h2>
-            <div class="resume-section-content">
-              <p><b>Software Development Process</b></p>
-              <p>2014</p>
-              <p>One of the difficulties of working as a software developer in a non-software company is that, a proper process doesn't exists. Most of the work is based on frequent change requests such as tickets. Work becomes very un-organized quickly. Establishing a higher level stucture was necessary. Challenges are that often these companies lacks resources or interest to keep up with standard procedures. Often considered complex and useless. It was a long term project to capture the realistic process of the company and map it into an understandable format.</p>
-              <img src="./portfolio/2014/process.png" /><br>
-            </div>
-            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3"></h2>
-            <div class="resume-section-content">
-              <p><b>Digital Audio Processing Simualtor</b></p>
-              <p>2004</p>
-              <p>Very first personal project of mine that got award from many organizations and contests. Developed when I was a student. I had great interest in signal processing. There were not so many audio processing simulators existed at the time and I decided to create on by myself. Benefit was that the calculation modules were configurable and the presentation of the simulation was very intriguing. It is out-dated project but I will always have this project in my portfolio as to remember my passion to enter software domain</p>
-              <img src="./portfolio/2004/DAPS.png" width="100%"/><br>
-            </div>
-          </section>
-        </div>
       </div>
       <!--//resume-body-->
     </div>
