--- a/cv/index.html
+++ b/cv/index.html
@@ -94,7 +94,7 @@
           </h2>
           <div class="resume-section-content">
             <pre class="mb-0">
-Expertise in Mobile dev (Android, iOS), Web app, and Desktop application. Recently, worked with Whirlpool Italy, delivering mobile app to support their workflow. Skilled in software development, architecture, customer management and project management.
+Expertise in Mobile dev (Android, iOS), Web app, and Desktop application. Recently, worked on Whirlpool Italy projects, delivering mobile app to support their workflow. Skilled in software development, architecture, customer management and project management.
 
 Status:
 * Residence in Italy
@@ -154,15 +154,11 @@ My lastest work get be discovered in github repository:
                               project was software architecturing, development.</p>
                             <img src="./portfolio/2018/whirlpool.png" width="70%" /><br>
 
-                            - Proposing project idea to the client and the management in order to initiate the
-                            project<br>
-                            - Continuous communication with the key user in order to report progress and collect
-                            feedback<br>
+                            - Propose project to the client and the management in order to initiate the project<br>
+                            - Continuous communication with the key user in order to report progress and collect feedback<br>
                             - Assist project management by providing cost related measures throuout of the project<br>
-                            - Produced a software architecture that ensures integration with existing systems and
-                            workflows.<br>
-                            - Developed a xamarin mobile software, and replication module to enable offline capable
-                            features<br>
+                            - Produced a software architecture that ensures integration with existing systems and workflows. Went through a review process with internal dev team and also with Whirlpool infrastructure team to ensure the feasibility<br>
+                            - Developed a Xamarin mobile software, and implemented replication features to enable offline functionality<br>
                             - Developed a C# netcore backend software providing authentication and replication<br>
                             <br>
                           </div>
@@ -256,6 +252,22 @@ My lastest work get be discovered in github repository:
                             <br>
                           </div>
                         </li>
+                        <li>
+                            <div class="resume-section-content">
+                              <p><b>Project Scheduling Portal</b></p>
+                              <p>2019.01 ~ 2019.09</p>
+                              <img src="./portfolio/2016/portal.png" width="70%" /><br>
+                              <BR>
+                              - Communicate with research team in order to collect requirements<br>
+                              - Communicate with operation team in order to ensure feasibility of the project<br>
+                              - Proposed a project plan to the management<br>
+                              - Coordinated the progress and status of the project with interested parties<br>
+                              - Participate to develop a python/bootstrap web application<br>                              
+                              - Planned a release to minimize the operation interruption.<br>
+                              <br>
+                              <br>
+                            </div>
+                          </li>
                       </ul>
 
                       <h4 class="resume-timeline-item-desc-heading font-weight-bold">
@@ -317,6 +329,15 @@ My lastest work get be discovered in github repository:
                               plays a major
                               role in successful delivery of the project.</p>
                             <img src="./portfolio/2015/searchengine.png" /><br>
+                            <BR>
+                              - Initiate project using PRINCE2 methodology<br>
+                              - Identify interested parties and also carefully collect potential conflict of interest among the parties<br>
+                              - Risk analysis on the delivery of the project. Organization was quite resistent to changes. Establishing communication strategy was the key to mitigate and minimize the risk in this project. As 1,000 on-site staff and 8 off-shore organization would not be disturbed in their operation.<br>
+                              - Proposed a project plan to the resource management<br>
+                              - Coordinated the progress and status of the project with interested parties<br>
+                              - Developed a elasticsearch web application<br>                              
+                              - Planned a release to minimize the resistent to changes.<br>
+
                             <br>
                           </div>
                         </li>
@@ -340,6 +361,10 @@ My lastest work get be discovered in github repository:
                               the
                               company and map it into an understandable format.</p>
                             <img src="./portfolio/2014/process.png" width="70%" /><br>
+                            - Initiate project using PRINCE2 methodology<br>
+                            - Extract and adapt ISO standard into fitting model of the current organization workflows<br>
+                            - Continuous training the dev team and interested parties over 3 years to settle on the standardization<br>
+                            <br>
                           </div>
                         </li>
                       </ul>
